syntax = "proto3";

package main;

option go_package = "./proto";

// 添加会员表
message AddMemberReq {
  string member_name = 1; //用户名
  string password = 2; //密码
  string phone = 3; //手机号码

}

message AddMemberResp {
  string token = 1;
}

// 删除会员表
message DeleteMemberReq {
  repeated int64 ids = 1;
}

message DeleteMemberResp {
  string pong = 1;
}

// 更新会员表
message UpdateMemberReq {
  int64 id = 1; //
  int64 member_level_id = 2; //会员等级id
  string member_name = 3; //用户名
  string password = 4; //密码
  string nickname = 5; //昵称
  string phone = 6; //手机号码
  int32 member_status = 7; //帐号启用状态:0->禁用；1->启用
  string icon = 8; //头像
  int32 gender = 9; //性别：0->未知；1->男；2->女
  string birthday = 10; //生日
  string city = 11; //所做城市
  string job = 12; //职业
  string personalized_signature = 13; //个性签名
  int32 source_type = 14; //用户来源
  int32 integration = 15; //积分
  int32 growth = 16; //成长值
  int32 lottery_count = 17; //剩余抽奖次数
  int32 history_integration = 18; //历史积分数量

}

message UpdateMemberResp {
  string pong = 1;
}

// 更新会员表状态
message UpdateMemberStatusReq {
  repeated int64 ids = 1; //
  int32 member_status = 2; //帐号启用状态:0->禁用；1->启用

}

message UpdateMemberStatusResp {
  string pong = 1;
}

// 查询会员表详情
message QueryMemberDetailReq {
    int64 id = 1;
}

message QueryMemberDetailResp {
  int64 id = 1; //
  int64 member_level_id = 2; //会员等级id
  string member_name = 3; //用户名
  string password = 4; //密码
  string nickname = 5; //昵称
  string phone = 6; //手机号码
  int32 member_status = 7; //帐号启用状态:0->禁用；1->启用
  string icon = 8; //头像
  int32 gender = 9; //性别：0->未知；1->男；2->女
  string birthday = 10; //生日
  string city = 11; //所做城市
  string job = 12; //职业
  string personalized_signature = 13; //个性签名
  int32 source_type = 14; //用户来源
  int32 integration = 15; //积分
  int32 growth = 16; //成长值
  int32 lottery_count = 17; //剩余抽奖次数
  int32 history_integration = 18; //历史积分数量
  string create_time = 19; //创建时间
  string update_time = 20; //更新时间
  string member_level = 21; //会员等级名称

}

// 分页查询会员表列表
message QueryMemberListReq {
  int64 page_num = 1; //第几页
  int64 page_size = 2; //每页的数量
  string member_name = 3; //用户名
  int32 member_status = 4; //帐号启用状态:0->禁用；1->启用
  string phone = 5; //手机号码

}

message MemberListData {
  int64 id = 1; //
  int64 member_level_id = 2; //会员等级id
  string member_name = 3; //用户名
  string password = 4; //密码
  string nickname = 5; //昵称
  string phone = 6; //手机号码
  int32 member_status = 7; //帐号启用状态:0->禁用；1->启用
  string icon = 8; //头像
  int32 gender = 9; //性别：0->未知；1->男；2->女
  string birthday = 10; //生日
  string city = 11; //所做城市
  string job = 12; //职业
  string personalized_signature = 13; //个性签名
  int32 source_type = 14; //用户来源
  int32 integration = 15; //积分
  int32 growth = 16; //成长值
  int32 lottery_count = 17; //剩余抽奖次数
  int32 history_integration = 18; //历史积分数量
  string create_time = 19; //创建时间
  string update_time = 20; //更新时间

}

message QueryMemberListResp {
  int64 total = 1;
  repeated  MemberListData list = 2;
}

message MemberLoginReq {
  string      Account = 1;
  string      Password = 2;
  string      Ip = 3;
  int32      LoginType = 4;
}

message MemberLoginResp {
  string Token = 1;
}

message UpdateMemberIntegrationReq {
  int64 id = 1;
  int64 Integration = 2;
}

message UpdateMemberIntegrationResp {
  string pong = 1;
}

// 会员表
service MemberService {
  // 添加会员表
  rpc AddMember(AddMemberReq) returns (AddMemberResp){}
  // 删除会员表
  rpc DeleteMember(DeleteMemberReq) returns (DeleteMemberResp){}
  // 更新会员表
  rpc UpdateMember(UpdateMemberReq) returns (UpdateMemberResp ){}
  // 更新会员表状态
  rpc UpdateMemberStatus(UpdateMemberStatusReq) returns (UpdateMemberStatusResp ){}
  // 查询会员表详情
   rpc QueryMemberDetail(QueryMemberDetailReq) returns (QueryMemberDetailResp){}
  // 查询会员表列表
  rpc QueryMemberList(QueryMemberListReq) returns (QueryMemberListResp){}


  //会员登录
  rpc MemberLogin(MemberLoginReq) returns(MemberLoginResp);
  //更新会员积分
  rpc UpdateMemberIntegration(UpdateMemberIntegrationReq) returns(UpdateMemberIntegrationResp);
}
